# FilenFoto

./: .gitmodules  .swift-format  README.md
FilenFoto/: ContentView.swift  FilenFotoApp.swift  Localizable.xcstrings  PhotoEnviornment.swift  filen_swift+Utilities.swift  filen_swift.swift
FilenFoto.xcodeproj/: project.pbxproj
FilenFoto/Components/: LoadingIndicator.swift  Overlay.swift
FilenFoto/HelperViews/: FanoutView.swift  HelperImagerViews.swift  IconViews.swift  IndexedPagedView.swift  QuickLoadingView.swift  ScrollUpInfoTest.swift  SearchResultsGrid.swift
FilenFoto/Localizations/: Localizable.xcstrings
FilenFoto/LoginView/: LoginField.swift  LoginView.swift
FilenFoto/MainViews/: CarouselTest.swift  ContentView.swift  FilenSyncStatus.swift  GridTest.swift  (+7 more)
FilenFotoTests/: FFAssetCacheManagerTests.swift  FFAssetManagerTester.swift  FilenFotoTests.swift  SwiftUIProviderProtocolTest.swift  TestResourceManager.swift  UtilitiesTest.swift
FilenFotoUITests/: FilenFotoUITests.swift  FilenFotoUITestsLaunchTests.swift
filen-swift/: Cargo.toml  build-rust.sh  rust-toolchain.toml
filen-swift/.cargo/: config.toml
filen-swift/Frameworks/: Info.plist
filen-swift/Frameworks/ios-arm64-simulator/Headers/: filen_swiftFFI.h
filen-swift/Frameworks/ios-arm64/Headers/: filen_swift.swift  module.modulemap
filen-swift/Frameworks/libfilen_swift.xcframework/ios-arm64-simulator/Headers/: filen_swift.swift
filen-swift/Frameworks/libfilen_swift.xcframework/ios-arm64/Headers/: filen_swiftFFI.h
filen-swift/src/: auth.rs  client.rs  client_macro.rs  lib.rs  types.rs
indexed-blobs/: Cargo.toml  README.md
indexed-blobs/src/: blob_provider.rs  consts.rs  err_type.rs  fs.rs  lib.rs
indexed-blobs/src/data_structures/: fd_pool.rs  mmap_midx.rs  mod.rs
(+198 files in other folders)
