[package]
name = "filen-swift"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
filen-sdk-rs = { path = "../filen-rs/filen-sdk-rs", features = ["tokio"] }
filen-types = { path = "../filen-rs/filen-types" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
serde_cbor = "0.11.2"
serde = "*"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "filen_swift"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
